--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </h2>
 
           <div class="text-meta">
-            <time class="date">10 июня 2019</time>
+            <span class="date">10 июня 2019</span>
             <span class="author">Неизвестный автор</span>
           </div>
 
@@ -131,7 +131,7 @@
           </h2>
 
           <div class="text-meta">
-            <time class="date">10 июня 2019</time>
+            <span class="date">10 июня 2019</span>
             <span class="author">Неизвестный автор</span>
           </div>
 
@@ -153,7 +153,7 @@
             <a class="news-title__link" href="#0">Лучшие музыкальные фестивали этого лета</a>
           </h2>
           <div class="text-meta">
-            <time class="date">10 июня 2019</time>
+            <span class="date">10 июня 2019</span>
             <span class="author">Неизвестный автор</span>
           </div>
           <div class="text-post_music">
@@ -177,7 +177,7 @@
           </h2>
 
           <div class="text-meta">
-            <time class="date">10 июня 2019</time>
+            <span class="date">10 июня 2019</span>
             <span class="author">Неизвестный автор</span>
           </div>
           <p class="text-post">Узнаем основы проектирования новых пищевых и около-пищевых опытов, вскроем физику, химию и микробиологию еды.</p>
@@ -198,7 +198,7 @@
             <a class="news-title__link" href="#0">делаем модные принты на подушках для интерьера</a>
           </h2>
           <div class="text-meta">
-            <time class="date">10 июня 2019</time>
+            <span class="date">10 июня 2019</span>
             <span class="author">Неизвестный автор</span>
           </div>
           <p class="text-post">Подушки для дивана целесообразнее заказать в съемных чехлах на молнии, если потребуется чистка подушек, проще снять чехлы, чем везти подушку в химчистку.</p>
@@ -214,7 +214,7 @@
           <img src="images/2.jpg" alt="картинка человек идёт по пляжу">
         </div>
         <div class="latest-post-news">
-          <time class="latest-post_date">14 июня 2019</time>
+          <span class="latest-post_date">14 июня 2019</span>
           <h3 class="latest-post_text">
             <a class="latest-post_link" href="#0">10 мест ради которых стоит проснуться</a>
           </h3>
@@ -227,7 +227,7 @@
           <img src="images/151.jpg" alt="йога для домашних">
         </div>
         <div class="latest-post-news">
-          <time class="latest-post_date">14 июня 2019</time>
+          <span class="latest-post_date">14 июня 2019</span>
           <h3 class="latest-post_text">
             <a class="latest-post_link" href="#0">йога для домашних</a>
           </h3>
@@ -239,7 +239,7 @@
         </div>
         <div class="latest-post-news">
 
-          <time class="latest-post_date">14 июня 2019</time>
+          <span class="latest-post_date">14 июня 2019</span>
 
           <h3 class="latest-post_text">
             <a class="latest-post_link" href="#0">как мы превратили классное место в балкон</a>
@@ -251,7 +251,7 @@
           <img src="images/501.jpg" alt="кулинарный подход к науке">
         </div>
         <div class="latest-post-news">
-          <time class="latest-post_date">14 июня 2019</time>
+          <span class="latest-post_date">14 июня 2019</span>
           <h3 class="latest-post_text">
             <a class="latest-post_link" href="#0">кулинарный подход к науке</a>
           </h3>
@@ -262,7 +262,7 @@
           <img src="images/7.jpg" alt="лучшие прически для распущенных волос">
         </div>
         <div class="latest-post-news">
-          <time class="latest-post_date">14 июня 2019</time>
+          <span class="latest-post_date">14 июня 2019</span>
           <h3 class="latest-post_text">
             <a class="latest-post_link" href="#0">лучшие прически для распущенных волос</a>
           </h3>
@@ -421,7 +421,7 @@
 
 <!--POP-UP window  -->
 
-<div class="pop-up-wrap visually-hidde">
+<!-- <div class="pop-up-wrap visually-hidde">
   <section class="pop-up">
       <button class="pop-up__close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
         <h3 class="latest-post__title question__title">ваш фидбэк</h3>
@@ -459,6 +459,6 @@
             </button>
         </form>
   </section>
-</div>
+</div> -->
 </body>
 </html>
