--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
 <!-- section -->
 
   <section class="trend-block">
-    <div>
-      <h2 class="latest-post__title trends__title">Сейчас в тренде</h2>
-    </div>
-
+    <h2 class="latest-post__title trends__title">Сейчас в тренде</h2>
     <div class="trend-conteiner">
       <article class="trend__item">
         <div class="trend-card">
@@ -208,66 +205,68 @@
 
 
     <aside class="sidebar">
-      <h3 class="latest-post__title">новые посты</h3>
-      <article class="latest-post_card">
-        <div class="latest-post_img">
-          <img src="images/2.jpg" alt="картинка человек идёт по пляжу">
-        </div>
-        <div class="latest-post-news">
-          <span class="latest-post_date">14 июня 2019</span>
-          <h3 class="latest-post_text">
-            <a class="latest-post_link" href="#0">10 мест ради которых стоит проснуться</a>
-          </h3>
-        </div>
-      </article>
+      <section class="latest-post">
+        <h3 class="latest-post__title">новые посты</h3>
+        <article class="latest-post_card">
+          <div class="latest-post_img">
+            <img src="images/2.jpg" alt="картинка человек идёт по пляжу">
+          </div>
+          <div class="latest-post-news">
+            <span class="latest-post_date">14 июня 2019</span>
+            <h3 class="latest-post_text">
+              <a class="latest-post_link" href="#0">10 мест ради которых стоит проснуться</a>
+            </h3>
+          </div>
+        </article>
 
 
-      <article class="latest-post_card">
-        <div class="latest-post_img">
-          <img src="images/151.jpg" alt="йога для домашних">
-        </div>
-        <div class="latest-post-news">
-          <span class="latest-post_date">14 июня 2019</span>
-          <h3 class="latest-post_text">
-            <a class="latest-post_link" href="#0">йога для домашних</a>
-          </h3>
-        </div>
-      </article>
-      <article class="latest-post_card">
-        <div class="latest-post_img">
-          <img src="images/45.jpg" alt="как мы превратили классное место в балкон">
-        </div>
-        <div class="latest-post-news">
+        <article class="latest-post_card">
+          <div class="latest-post_img">
+            <img src="images/151.jpg" alt="йога для домашних">
+          </div>
+          <div class="latest-post-news">
+            <span class="latest-post_date">14 июня 2019</span>
+            <h3 class="latest-post_text">
+              <a class="latest-post_link" href="#0">йога для домашних</a>
+            </h3>
+          </div>
+        </article>
+        <article class="latest-post_card">
+          <div class="latest-post_img">
+            <img src="images/45.jpg" alt="как мы превратили классное место в балкон">
+          </div>
+          <div class="latest-post-news">
 
-          <span class="latest-post_date">14 июня 2019</span>
+            <span class="latest-post_date">14 июня 2019</span>
 
-          <h3 class="latest-post_text">
-            <a class="latest-post_link" href="#0">как мы превратили классное место в балкон</a>
-          </h3>
-        </div>
-      </article>
-      <article class="latest-post_card">
-        <div class="latest-post_img">
-          <img src="images/501.jpg" alt="кулинарный подход к науке">
-        </div>
-        <div class="latest-post-news">
-          <span class="latest-post_date">14 июня 2019</span>
-          <h3 class="latest-post_text">
-            <a class="latest-post_link" href="#0">кулинарный подход к науке</a>
-          </h3>
-        </div>
-      </article>
-      <article class="latest-post_card">
-        <div class="latest-post_img">
-          <img src="images/7.jpg" alt="лучшие прически для распущенных волос">
-        </div>
-        <div class="latest-post-news">
-          <span class="latest-post_date">14 июня 2019</span>
-          <h3 class="latest-post_text">
-            <a class="latest-post_link" href="#0">лучшие прически для распущенных волос</a>
-          </h3>
-        </div>
-      </article>
+            <h3 class="latest-post_text">
+              <a class="latest-post_link" href="#0">как мы превратили классное место в балкон</a>
+            </h3>
+          </div>
+        </article>
+        <article class="latest-post_card">
+          <div class="latest-post_img">
+            <img src="images/501.jpg" alt="кулинарный подход к науке">
+          </div>
+          <div class="latest-post-news">
+            <span class="latest-post_date">14 июня 2019</span>
+            <h3 class="latest-post_text">
+              <a class="latest-post_link" href="#0">кулинарный подход к науке</a>
+            </h3>
+          </div>
+        </article>
+        <article class="latest-post_card">
+          <div class="latest-post_img">
+            <img src="images/7.jpg" alt="лучшие прически для распущенных волос">
+          </div>
+          <div class="latest-post-news">
+            <span class="latest-post_date">14 июня 2019</span>
+            <h3 class="latest-post_text">
+              <a class="latest-post_link" href="#0">лучшие прически для распущенных волос</a>
+            </h3>
+          </div>
+        </article>
+      </section>  
 
       <form class="search">
         <input type="text" class="searching" placeholder="Найти..." required id="text">
@@ -316,95 +315,93 @@
   </div>
 
   <section class="shop-block">
-    <div>
-     <h2 class="latest-post__title shop__title">Наши изделия</h2>
-  </div>
+    <h2 class="latest-post__title shop__title">Наши изделия</h2>
+     
+     <div class="shop-wrap">
 
-  <div class="shop-wrap">
-
-    <article class="shop__item">
-      <picture class="shop-img">
-        <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet1.jpg">
-        <source media="(max-width: 640px)" srcset="images/shop-item-mobile1.jpg">  
-          <img class="shop-image" src="images/shop-item-desk1.jpg" alt="подушки на диван">
-      </picture>
-        <div class="shop-card">
-          <h2 class="news-title shop-card__title">подушки на диван</h2>
-          <p class="text-post shop-post">Набор из двух подушек с модными принтами. Видео о создании<a class="shop-link" href="#0"> здесь</a>.</p>
-
-          <div class="price-box">
-            <div class="product__prices">
-              <span class="product__price product__price_old">
-                <span class="product__price-value">1000</span>
-                <span class="product__rub">₽</span>
-              </span>
-              <span class="product__price">
-                <span class="product__price-value">800</span>
-                <span class="product__rub">₽</span>
-              </span>
-            </div>
-              <button class="btn__shop" type="button">в магазин<span class="visually-hidden">кнопка в магазин</span>
-              </button>
-          </div>
-        </div>
-    </article>
-
-    <article class="shop__item">
+      <article class="shop__item">
         <picture class="shop-img">
-            <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet2.jpg">
-            <source media="(max-width: 640px)" srcset="images/shop-item-mobile2.jpg">  
-              <img class="shop-image" src="images/shop-item-desk2.jpg" alt="кукла зайчик">
+          <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet1.jpg">
+          <source media="(max-width: 640px)" srcset="images/shop-item-mobile1.jpg">  
+            <img class="shop-image" src="images/shop-item-desk1.jpg" alt="подушки на диван">
         </picture>
+          <div class="shop-card">
+            <h2 class="news-title shop-card__title">подушки на диван</h2>
+            <p class="text-post shop-post">Набор из двух подушек с модными принтами. Видео о создании<a class="shop-link" href="#0"> здесь</a>.</p>
 
-            <div class="shop-card">
-              <h2 class="news-title shop-card__title">кукла «зайчик»</h2>
-              <p class="text-post shop-post">интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a class="shop-link" href="#0">весенняя серия постов</a> в блоге и несколько подкастов.</p>
-
-              <div class="price-box">
-                <div class="product__prices">
-                  <span class="product__price product__price_old">
-                    <span class="product__price-value"></span>
-                    <span class="product__rub"></span>
-                  </span>
-                  <span class="product__price">
-                    <span class="product__price-value">3500</span>
-                    <span class="product__rub">₽</span>
-                  </span>
-                </div>
-                  <button class="btn__shop" type="button">в магазин<span class="visually-hidden">кнопка в магазин</span>
-                  </button>
+            <div class="price-box">
+              <div class="product__prices">
+                <span class="product__price product__price_old">
+                  <span class="product__price-value">1000</span>
+                  <span class="product__rub">₽</span>
+                </span>
+                <span class="product__price">
+                  <span class="product__price-value">800</span>
+                  <span class="product__rub">₽</span>
+                </span>
               </div>
+                <button class="btn__shop" type="button">в магазин<span class="visually-hidden">кнопка в магазин</span>
+                </button>
             </div>
-    </article>
+          </div>
+      </article>
 
-    <article class="shop__item">
-        <picture class="shop-img">
-          <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet3.jpg">
-          <source media="(max-width: 640px)" srcset="images/shop-item-mobile3.jpg">
-              <img class="shop-image" src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
-        </picture>
+      <article class="shop__item">
+          <picture class="shop-img">
+              <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet2.jpg">
+              <source media="(max-width: 640px)" srcset="images/shop-item-mobile2.jpg">  
+                <img class="shop-image" src="images/shop-item-desk2.jpg" alt="кукла зайчик">
+          </picture>
 
-        <div class="shop-card">
-            <h2 class="news-title shop-card__title">Шестиугольная рамка</h2>
-              <p class="text-post shop-post">Необычная рамка для украшения дома из видео <a class="shop-link" href="#0">«Как сделать рамку из подручных средств за 30 минут»</a>.</p>
+              <div class="shop-card">
+                <h2 class="news-title shop-card__title">кукла «зайчик»</h2>
+                <p class="text-post shop-post">интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a class="shop-link" href="#0">весенняя серия постов</a> в блоге и несколько подкастов.</p>
 
                 <div class="price-box">
                   <div class="product__prices">
                     <span class="product__price product__price_old">
-                      <span class="product__price-value">500</span>
-                      <span class="product__rub">₽</span>
+                      <span class="product__price-value"></span>
+                      <span class="product__rub"></span>
                     </span>
                     <span class="product__price">
-                      <span class="product__price-value">400</span>
+                      <span class="product__price-value">3500</span>
                       <span class="product__rub">₽</span>
                     </span>
                   </div>
                     <button class="btn__shop" type="button">в магазин<span class="visually-hidden">кнопка в магазин</span>
                     </button>
                 </div>
-        </div>
-    </article>
-  </div>
+              </div>
+      </article>
+
+      <article class="shop__item">
+          <picture class="shop-img">
+            <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet3.jpg">
+            <source media="(max-width: 640px)" srcset="images/shop-item-mobile3.jpg">
+                <img class="shop-image" src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
+          </picture>
+
+          <div class="shop-card">
+              <h2 class="news-title shop-card__title">Шестиугольная рамка</h2>
+                <p class="text-post shop-post">Необычная рамка для украшения дома из видео <a class="shop-link" href="#0">«Как сделать рамку из подручных средств за 30 минут»</a>.</p>
+
+                  <div class="price-box">
+                    <div class="product__prices">
+                      <span class="product__price product__price_old">
+                        <span class="product__price-value">500</span>
+                        <span class="product__rub">₽</span>
+                      </span>
+                      <span class="product__price">
+                        <span class="product__price-value">400</span>
+                        <span class="product__rub">₽</span>
+                      </span>
+                    </div>
+                      <button class="btn__shop" type="button">в магазин<span class="visually-hidden">кнопка в магазин</span>
+                      </button>
+                  </div>
+          </div>
+      </article>
+    </div>
   </section>
 
   <footer>
@@ -421,7 +418,7 @@
 
 <!--POP-UP window  -->
  
-<!-- <div class="pop-up-wrap visually-hidde">
+<div class="pop-up-wrap visually-hidden">
   <section class="pop-up">
       <button class="pop-up__close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
         <h3 class="latest-post__title question__title">ваш фидбэк</h3>
@@ -459,6 +456,6 @@
             </button>
         </form>
   </section>
-</div> -->
+</div> 
 </body>
 </html>
