Дипломный проект на 25.01
Поправил блок trends через justify-content: space-between;

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
               </div>
       </article>
 
-      <article class="shop__item">
+      <article class="shop__item item-end">
           <picture class="shop-img">
             <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet3.jpg">
             <source media="(max-width: 640px)" srcset="images/shop-item-mobile3.jpg">
